@@ -18,18 +18,18 @@ import com.esri.gpt.catalog.harvest.protocols.HarvestProtocolAgp2Agp;
 import com.esri.gpt.catalog.publication.PublicationRequest;
 import com.esri.gpt.catalog.schema.Schema;
 import com.esri.gpt.control.view.SelectablePublishers;
-import com.esri.gpt.control.webharvest.IterationContext;
+import com.esri.gpt.control.webharvest.DefaultIterationContext;
 import com.esri.gpt.control.webharvest.protocol.ProtocolInvoker;
-import com.esri.gpt.framework.collection.StringAttributeMap;
 import com.esri.gpt.framework.context.RequestContext;
 import com.esri.gpt.framework.resource.api.Native;
 import com.esri.gpt.framework.resource.query.QueryBuilder;
+import static com.esri.gpt.framework.robots.BotsUtils.readBots;
 import com.esri.gpt.framework.security.identity.NotAuthorizedException;
 import com.esri.gpt.framework.security.principal.Publisher;
 import com.esri.gpt.framework.security.principal.RoleSet;
 import com.esri.gpt.framework.util.UuidUtil;
-import java.util.ArrayList;
 import java.util.Date;
+import static com.esri.gpt.framework.robots.BotsUtils.readBots;
 
 /**
  * Complete update request.
@@ -40,6 +40,7 @@ public class HrCompleteUpdateRequest extends HrRequest {
 
   /**
    * Creates instance of the request.
+   *
    * @param context request context
    * @param record record
    */
@@ -50,35 +51,35 @@ public class HrCompleteUpdateRequest extends HrRequest {
 
   /**
    * Creates native resource based on the information from the repository.
+   *
    * @param repository repository
    * @return native resource or <code>null</code> if no native resource
    * @throws Exception if accessing resource fails
    */
   private Native createNativeResource(HrRecord repository) throws Exception {
-    // declare placeholder for any exception thrown by query builder
-    final ArrayList<Exception> exceptions = new ArrayList<Exception>();
     // create such an instance of the iteration context so it will store each
     // exception in the placeholder
-    IterationContext iterationContext = new IterationContext() {
-
-      public void onIterationException(Exception ex) {
-        exceptions.add(ex);
-      }
-    };
+    DefaultIterationContext iterationContext = new DefaultIterationContext(readBots(
+            repository.getRobotsTxtMode(),
+            repository.getHostUrl()
+    ));
     // create new query builder specific for the repository
     QueryBuilder queryBuilder = repository.newQueryBuilder(iterationContext);
     // get native resource; this may throw exception(s) stored later in the
     // placeholder
     Native nativeResource = queryBuilder.getNativeResource();
     // assure there are no exceptions; if there are any, throw the first one
-    if (exceptions.size() > 0) {
-      throw exceptions.get(0);
+    if (!iterationContext.getExceptionInfos().isEmpty()) {
+      throw iterationContext.getExceptionInfos().getFirst().getException();
     }
     return nativeResource;
   }
 
   /**
    * Executes request.
+   *
+   * @return <code>true</code> if created new record, <code>false</code> if
+   * existing record has been updated
    * @throws Exception if any error occurred
    */
   public boolean execute() throws Exception {
@@ -104,7 +105,7 @@ public class HrCompleteUpdateRequest extends HrRequest {
       HrRecords records = select.getQueryResult().getRecords();
       if (records.size() > 0) {
         HrRecord oldRecord = records.get(0);
-        if (user.getLocalID()!=oldRecord.getOwnerId()) {
+        if (user.getLocalID() != oldRecord.getOwnerId()) {
           if (!user.getIsAdministrator()) {
             throw new NotAuthorizedException("Not authorized.");
           }
@@ -115,7 +116,7 @@ public class HrCompleteUpdateRequest extends HrRequest {
         if (record.getName().equals(oldRecord.getName())) {
           titleChanged = false;
         }
-        if (record.getFindable()==oldRecord.getFindable()) {
+        if (record.getFindable() == oldRecord.getFindable()) {
           findableChanged = false;
         }
       }
@@ -169,7 +170,7 @@ public class HrCompleteUpdateRequest extends HrRequest {
         if (!(record.getProtocol() instanceof HarvestProtocolAgp2Agp)) {
           title = record.getHostUrl();
         } else {
-          HarvestProtocolAgp2Agp p = (HarvestProtocolAgp2Agp)record.getProtocol();
+          HarvestProtocolAgp2Agp p = (HarvestProtocolAgp2Agp) record.getProtocol();
           title = p.getSourceHost() + " -> " + p.getDestinationHost();
         }
         ProtocolInvoker.setLockTitle(record.getProtocol(), false);
@@ -185,13 +186,14 @@ public class HrCompleteUpdateRequest extends HrRequest {
 
   /**
    * Checks if user is administrator.
+   *
    * @param context request context
    * @return <code>true</code> if user is administrator
    */
   private boolean isAdministrator(RequestContext context) {
     return context.getUser() != null
-      && context.getUser().getAuthenticationStatus().getWasAuthenticated()
-      && context.getUser().getAuthenticationStatus().
-      getAuthenticatedRoles().hasRole("gptAdministrator");
+            && context.getUser().getAuthenticationStatus().getWasAuthenticated()
+            && context.getUser().getAuthenticationStatus().
+            getAuthenticatedRoles().hasRole("gptAdministrator");
   }
 }
